Moves worker logic to ResponseFactory.rb -Response factory now encapsulates all logic for determining the proper response for a request -Worker calls the response factory -Responses now support any valid mime_type for the resource requested -Various other logic and organization changes.

--- a/rubyserver/public_html/index.html
+++ b/rubyserver/public_html/index.html
@@ -7,14 +7,14 @@
   Welcome to our Webserver
     <div>
         <fieldset>
-            <form method="post" action="http://localhost:56790">
+            <form method="post" action="http://localhost:8094">
                 <p>Enter some text for POST:<input type="text" name="post_value"></p>
                 <p>Now some more:<input type="text" name="post_value"></p>
                 <input type="submit">
             </form>
         </fieldset>
         <fieldset>
-            <form method="get" action="http://localhost:56790">
+            <form method="get" action="http://localhost:8094/protected/authentication.html">
                 <p>Enter some text for GET:<input type="text" name="post_value"></p>
                 <p>Now some more:<input type="text" name="post_value"></p>
                 <input type="submit">
